--- a/TeraSnakeMulti/TeraSnakeMulti.vcxproj.filters
+++ b/TeraSnakeMulti/TeraSnakeMulti.vcxproj.filters
@@ -37,7 +37,7 @@
       <Filter>Source Files\Game</Filter>
     </ClCompile>
     <ClCompile Include="src\ExternalSnake.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -57,7 +57,7 @@
       <Filter>Header Files\Game</Filter>
     </ClInclude>
     <ClInclude Include="src\ExternalSnake.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Game</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
