Rewrote some code for improved code quality and remade socket communication structure

--- a/TeraSnakeMulti/TeraSnakeMulti.vcxproj
+++ b/TeraSnakeMulti/TeraSnakeMulti.vcxproj
@@ -132,19 +132,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Client.cpp" />
     <ClCompile Include="src\ExternalSnake.cpp" />
-    <ClCompile Include="src\client.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\player.cpp" />
+    <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Snake.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Client.h" />
+    <ClInclude Include="src\Definitions.h" />
     <ClInclude Include="src\ExternalSnake.h" />
-    <ClInclude Include="src\client.h" />
-    <ClInclude Include="src\definitions.h" />
     <ClInclude Include="src\Game.h" />
-    <ClInclude Include="src\player.h" />
+    <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Snake.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
